# adventofcode2021

./: CMakeLists.txt  conanfile.py  conanprofile.toml
include/: day4.h  document_reader.h
input/: day2.csv  day3.csv  input.txt
src/: adventofcode.cpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp
